# CppLibraryAndPackage

./: .gitignore  build.py
clap_cli/: client.py  main.py
clap_cli/commands/: build.py  command.py  init.py  install.py  list.py  run.py  uninstall.py  version.py
clap_cli/init_templates/: cmake.py  mingw32.py  template.py
clap_cli/utils/: zip_utils.py
clap_registry/authentication/: admin.py  models.py
clap_registry/authentication/migrations/: 0001_initial.py
clap_registry/base/: urls.py  views.py
clap_registry/clap/: admin.py  apps.py  models.py  urls.py  views.py
clap_registry/clap/migrations/: 0001_initial.py
clap_registry/core/: asgi.py  settings.py  urls.py  wsgi.py
clap_registry/package/: admin.py  models.py  urls.py  views.py
clap_registry/package/migrations/: 0001_initial.py  0002_versionpackage_is_latest.py  0003_versionpackage_target_library.py  0004_alter_package_options.py  0005_package_repository_url.py
clap_registry/static/css/: bg.css
clap_registry/templates/: documentation.html  index.html  layout.html  package.html  packages.html
tests/: CMakeLists.txt  clap_package.json
tests/src/: main.cpp
